--- a/src/templates/partials/header.ejs
+++ b/src/templates/partials/header.ejs
@@ -30,7 +30,7 @@
                         <!-- iphone: http://maps.apple.com/?q=台北市中山區北安路554巷33號 -->
                         <%= address.info %></a>
                     </span>
-                    <a class="info-mobile" href="https://www.google.com/maps/?q=place_id:ChIJFwTtdQ-sQjQRDdUv6eFR9Zo&center=25.0801111,121.5499876&zoom=16.25&language=zh-TW"><%= address.info %></a></a>
+                    <a class="info-mobile" href=""><%= address.info %></a></a>
                     <span class="note"><%= address.note %></span>
                 </address>
             </div>
