--- a/src/less/style.less
+++ b/src/less/style.less
@@ -893,4 +893,9 @@ body {
                 display: none;
             }
         }
+        .mapOverlay {
+            .bd {
+                width: 80%;
+            }
+        }
 }
