Separate google analytics code

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -17,4 +17,5 @@
         <% include ./partials/map.ejs %>
     </body>
     <script src="./script.js" inline></script>
+    <% include ./partials/googleAnalytics.ejs %>
 </html>
