--- a/src/templates/people.ejs
+++ b/src/templates/people.ejs
@@ -65,4 +65,5 @@
     </body>
     <script>var peopleCategory = <%- JSON.stringify(peopleWithdomains); %></script>
     <script src="./script.js" inline></script>
+    <% include ./partials/googleAnalytics.ejs %>
 </html>
