--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -16,6 +16,5 @@
         </div>
         <% include ./partials/map.ejs %>
     </body>
-    <script src="./script.js" inline></script>
-    <% include ./partials/googleAnalytics.ejs %>
+    <% include ./partials/scripts.ejs %>
 </html>
