--- a/src/templates/people.ejs
+++ b/src/templates/people.ejs
@@ -64,6 +64,5 @@
         <% include ./partials/map.ejs %>
     </body>
     <script>var peopleCategory = <%- JSON.stringify(peopleWithdomains); %></script>
-    <script src="./script.js" inline></script>
-    <% include ./partials/googleAnalytics.ejs %>
+    <% include ./partials/scripts.ejs %>
 </html>
