--- a/src/templates/schedule.ejs
+++ b/src/templates/schedule.ejs
@@ -21,5 +21,5 @@
         <% include ./partials/map.ejs %>
     </body>
     <script src="./script.js" inline></script>
-    <% include ./partials/googleAnalytics.ejs %>
+    <% include ./partials/scripts.ejs %>
 </html>
