--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -17,5 +17,5 @@
         <% include ./partials/map.ejs %>
     </body>
     <script src="./script.js" inline></script>
-    <% include ./partials/googleAnalytics.ejs %>
+    <% include ./partials/scripts.ejs %>
 </html>
