--- a/src/templates/partials/header.ejs
+++ b/src/templates/partials/header.ejs
@@ -16,7 +16,7 @@
             </nav>
         </div>
         <h1 class="title">
-            <span class="name"><%= h1.name %></span>
+            <a class="name" href="./"><%= h1.name %></a>
             <span class="tagline"><%= h1.tagline %></span>
         </h1>
         <div class="phone">
