--- a/src/less/style.less
+++ b/src/less/style.less
@@ -39,7 +39,7 @@ body {
 .page {
     position: relative;
     //  http://api.thumbr.it/whitenoise-150x150.png?background=ffffff&noise=dddddd&density=15&opacity=50
-    background: url('../images/bg2.png') repeat;
+    background: #f6f2e4 url('../images/bg2.png') repeat;
     z-index: 2;
     &:before {
         display: block;
@@ -48,8 +48,6 @@ body {
         top: 220px;
         width: 100%;
         height: 280px;
-        background: url('../images/paws.png') repeat;
-        background-size: 200px 280px;
         z-index: 1;
     }
     &:after {
@@ -61,7 +59,7 @@ body {
         height: 280px;
         // http://www.cssmatic.com/noise-texture
         //background: url('images/whitenoise-150x150.png') repeat;
-        background: url('../images/bg-b1.png') repeat;
+        background: #6dd0cd url('../images/bg-b1.png') repeat;
         z-index: 0;
         //box-shadow: #777 0 0 1px;
     }
@@ -560,6 +558,15 @@ body {
 .calendar {
     width: 100%;
     height: 600px;
+}
+@media only screen
+and (min-width : 740px) {
+    .page {
+        &:before {
+            background: url('../images/paws.png') repeat;
+            background-size: 200px 280px;
+        }
+    }
 }
 // smaller desktop or tablet
 @media only screen
