--- a/src/templates/partials/head.ejs
+++ b/src/templates/partials/head.ejs
@@ -14,5 +14,5 @@
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="apple-touch-icon" sizes="45x45" href="images/logo.png" />
     <link rel="icon" type="image/png" sizes="45x45"  href="images/logo.png" />
-    <link rel="stylesheet" href="./production.css" />
+    <link rel="stylesheet" href="./critical.css" inline />
 </head>
