Use callback in build to avoid problem; Use fixed item height in people page

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -3,7 +3,7 @@
     <% var page = index; var pageName = 'index'; %>
     <% include ./partials/head.ejs %>
     <body>
-        <div class="page">
+        <div class="page index">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
