Update style and schedule page

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -86,7 +86,7 @@ body {
     position: relative;
     top: -3px;
     background: #fff;
-    max-width: @pageW - 60;
+    max-width: 87%;
     margin: 0 auto;
     //box-shadow: #777 0 1px 4px;
     //border: 3px solid @color-tiffany;
@@ -188,7 +188,7 @@ body {
     position: relative;
     overflow: hidden;
     width: 96%;
-    height: 400px;
+    height: 500px;
     margin: 0 auto;
     z-index: 15;
     border: 6px solid #fff;
@@ -431,7 +431,7 @@ body {
         border: 0;
         width: @d;
         height: @d;
-        background: #fff url('../images/close-1.png') no-repeat;
+        background: #fff url('../images/close.png') no-repeat;
         border-radius: 50px;
         background-size: @d @d;
     }
@@ -457,6 +457,9 @@ body {
         &:first-child {
             margin: 0;
         }
+    }
+    img {
+        width: 100%;
     }
 }
 .sidebar {
@@ -790,7 +793,7 @@ and (min-width : 740px) {
             }
         }
         .hero {
-            height: 180px;
+            height: 210px;
             img {
                 left: -5%;
                 width: 110%;
