--- a/src/templates/schedule.ejs
+++ b/src/templates/schedule.ejs
@@ -10,7 +10,7 @@
                 <div class="body">
                     <div class="content">
                         <main>
-                            <iframe class="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=800&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.taiwan%23holiday%40group.v.calendar.google.com&amp;color=%232952A3&amp;src=qrjvf8vspf6d8rvj3e0h5v93q8%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=Asia%2FTaipei" style="border-width:0" frameborder="0" scrolling="no"></iframe>
+                            <img src="./images/eden-calendar.jpg" />
                         </main>
                     </div>
                     <% include ./partials/sidebar.ejs %>
