Add facebook plugin; Update doctor info

--- a/src/templates/partials/scripts.ejs
+++ b/src/templates/partials/scripts.ejs
@@ -6,4 +6,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-97215299-1', 'auto');
 ga('send', 'pageview');
+(function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=248003741893222";fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
 </script>
