--- a/src/templates/partials/map.ejs
+++ b/src/templates/partials/map.ejs
@@ -1,6 +1,6 @@
 <div class="mapOverlay">
-    <div class="bd">
-        <a class="close"><span class="notxt">關閉</span></a>
+    <div class="overlay-bd">
+        <a class="overlay-close"><span class="notxt">關閉</span></a>
         <iframe
           frameborder="0"
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAf8MO-UPLgMT5_R0IRKYehAo_E7SMjMA8
