--- a/src/templates/partials/sidebar.ejs
+++ b/src/templates/partials/sidebar.ejs
@@ -17,11 +17,8 @@
             </section>
         <% } %>
         <section>
-            <div class="hd">
-                <h3>Facebook專頁</h3>
-            </div>
             <div class="bd">
-                <div class="fb-page" data-href="https://www.facebook.com/EdenAnimalHosp/" data-tabs="timeline" data-width="270" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/EdenAnimalHosp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EdenAnimalHosp/">伊甸動物醫院</a></blockquote></div>
+                <div class="fb-page" data-href="https://www.facebook.com/EdenAnimalHosp/" data-tabs="timeline" data-width="270" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/EdenAnimalHosp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EdenAnimalHosp/">Facebook專頁</a></blockquote></div>
             </div>
         </section>
     </aside>
