--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -13,6 +13,7 @@
                 </div>
                 <% include ./partials/footer.ejs %>
             </div>
+            <% include ./partials/overlay.ejs %>
         </div>
         <% include ./partials/map.ejs %>
     </body>
