Simplify build steps

--- a/src/templates/departments.ejs
+++ b/src/templates/departments.ejs
@@ -3,7 +3,7 @@
     <% var page = departments; var pageName = 'departments'; %>
     <% include ./partials/head.ejs %>
     <body>
-        <div class="page schedule">
+        <div class="page departments">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
@@ -16,6 +16,5 @@
         </div>
         <% include ./partials/map.ejs %>
     </body>
-    <script src="./script.js" inline></script>
     <% include ./partials/scripts.ejs %>
 </html>
