Add 24h page; Update content partial structure for flexibility

--- a/src/templates/24h.ejs
+++ b/src/templates/24h.ejs
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <% var page = index; var pageName = 'index'; %>
+    <% var page = roundClock; var pageName = 'roundClock'; %>
     <% include ./partials/head.ejs %>
     <body>
-        <div class="page index">
+        <div class="page 24h">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
                 <div class="body">
                     <div class="content">
                         <main>
+                            <h2>急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
                             <% include ./partials/content.ejs %>
+                            <iframe
+                              frameborder="0"
+                              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAf8MO-UPLgMT5_R0IRKYehAo_E7SMjMA8
+                                &q=place_id:ChIJFwTtdQ-sQjQRDdUv6eFR9Zo&center=25.0801111,121.5499876&zoom=16.25&language=zh-TW" allowfullscreen>
+                            </iframe>
                         </main>
                     </div>
                     <% include ./partials/sidebar.ejs %>
