--- a/src/less/style.less
+++ b/src/less/style.less
@@ -454,13 +454,18 @@ body {
     width: 65%;
     margin: 0 5% 0 0;
     vertical-align: top;
-    color: #555;
+    color: #333;
     font-size: 17px;
     line-height: 28px;
     h2 {
         font-size: 24px;
         font-weight: 300;
-        color: @color-eden;
+        color: #555;
+    }
+    h3 {
+        font-size: 20px;
+        font-weight: 300;
+        color: #555;
     }
     p {
 
@@ -474,6 +479,24 @@ body {
     img {
         width: 100%;
     }
+    a {
+        text-decoration: none;
+        &:link,
+        &:visited {
+            color: @color-eden;
+        }
+        &:hover {
+            color: @color-tiffany;
+
+        }
+        &:active {
+            color: @color-eden-dark;
+        }
+    }
+    iframe {
+        width: 100%;
+        height: 400px;
+    }
 }
 .sidebar {
     display: inline-block;
@@ -482,8 +505,21 @@ body {
     font-size: 16px;
     color: #555;
     h3 {
-        color: @color-eden;
+        color: #333;
         font-weight: 300;
+    }
+    a {
+        text-decoration: none;
+        &:link,
+        &:visited {
+            color: @color-eden;
+        }
+        &:hover {
+            color: @color-tiffany;
+        }
+        &:active {
+            color: @color-eden-dark;
+        }
     }
     .bd {
         line-height: 32px;
@@ -679,6 +715,17 @@ and (min-width : 740px) {
             }
         }
     }
+    .content {
+        iframe {
+            height: 300px;
+        }
+        h2 {
+            font-size: 20px;
+        }
+        h3 {
+            font-size: 18px;
+        }
+    }
     .title {
         width: 65%;
         height: @logoH + 12;
@@ -845,6 +892,9 @@ and (min-width : 740px) {
                 font-size: 20px;
             }
             line-height: 30px;
+            iframe {
+                height: 240px;
+            }
         }
         .footer {
             width: 90%;
