--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -8,7 +8,11 @@
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
                 <div class="body">
-                    <% include ./partials/content.ejs %>
+                    <div class="content">
+                        <main>
+                            <% include ./partials/content.ejs %>
+                        </main>
+                    </div>
                     <% include ./partials/sidebar.ejs %>
                 </div>
                 <% include ./partials/footer.ejs %>
