--- a/src/templates/divisions.ejs
+++ b/src/templates/divisions.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <% var page = departments; var pageName = 'departments'; %>
+    <% var page = divisions; var parentPage = service; var pageName = 'service'; var subNav = 'divisions'; %>
     <% include ./partials/head.ejs %>
     <body>
         <div class="page departments">
@@ -10,6 +10,7 @@
                 <div class="body">
                     <div class="content">
                         <main>
+                            <% include ./partials/subnav.ejs %>
                             <% include ./partials/content.ejs %>
                         </main>
                     </div>
