--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <% var page = service; var pageName = 'service'; %>
+    <% var page = service; var parentPage = service; var pageName = 'service'; %>
     <% include ./partials/head.ejs %>
     <body>
         <div class="page service">
@@ -8,9 +8,30 @@
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
                 <div class="body">
-                    <div class="content">
+                    <div class="content subpages">
                         <main>
-                            <% include ./partials/content.ejs %>
+                            <% include ./partials/subnav.ejs %>
+
+                            <section class="subpage 24h">
+                                <h2>急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
+                                <% var page = roundClock; var subNav = '24h'; %>
+                                <% include ./partials/content.ejs %>
+                                <iframe
+                                  frameborder="0"
+                                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAf8MO-UPLgMT5_R0IRKYehAo_E7SMjMA8
+                                    &q=place_id:ChIJFwTtdQ-sQjQRDdUv6eFR9Zo&center=25.0801111,121.5499876&zoom=16.25&language=zh-TW" allowfullscreen>
+                                </iframe>
+                            </section>
+
+                            <section class="subpage divisions">
+                                <% var page = divisions; var subNav = 'divisions'; %>
+                                <% include ./partials/content.ejs %>
+                            </section>
+
+                            <section class="subpage beyond-dog-cat">
+                                <% var page = beyondDogCat; var subNav = 'beyond-dog-cat'; %>
+                                <% include ./partials/content.ejs %>
+                            </section>
                         </main>
                     </div>
                     <% include ./partials/sidebar.ejs %>
